# lox-genie

./: .cursorrules  .dockerignore  .gitignore  README.md  config.py  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  genie.py  main.py  package-lock.json  package.json  pyproject.toml
api/: README.md  fantasy_football.py  fantasycalc.py  sleeper_draft.py  sleeper_leagues.py  sleeper_team.py  sleeper_user.py
aws/: utils.py
docker/: Dockerfile.api  Dockerfile.genie  Dockerfile.mcp  Dockerfile.mongodb  Dockerfile.redis  Dockerfile.ui  README.md
football/dynasty/: ifl_2025.ipynb  ifl_drafts.py  preprocessing.py  rookies.py
football/functions/: custom_stats.py
functions/sleeper/: utils.py
notes/: general.md  plan.md
requirements/: README.md
scripts/: README.md  run-dev.bat  run-dev.sh  setup-llama-model.sh
services/api/: main.py
services/api/agent/: config.py  graph.py  mcp.py  schemas.py  utils.py
services/api/api/: app.py
services/api/core/: config.py
services/api/crud/: aws_s3.py  mongodb.py
services/api/pipelines/: README.md  fantasy_players.py  fantasycalc.py  sleeper.py  youtube_summarizer.py
services/api/redis/: README.md  __init__.py  agent_state.py  agent_state_crud.py  client.py  config.py  example_usage.py
services/api/schemas/: agents.py  chat.py  health.py  thread.py  youtube.py
services/api/tests/: README.md  __init__.py  agents_test_data.json  conftest.py  run_tests.py  run_tests.sh  test_agents.py
services/api/utils/: logger.py  refresh_date.py
services/genie/: README.md  main.py  notes.md
services/genie/agent/: README.md  config.py  graph.py  mcp_client.py  schemas.py  tools.py  utils.py
services/genie/api/: app.py
services/genie/core/: config.py
services/genie/crud/: aws_s3.py
services/genie/models/: chat.py
services/genie/utils/: refresh_date.py
services/mcp/: main.py
services/mcp/core/: config.py
services/mcp/prompts/: planner.py
services/mcp/resources/: defense.md  defense.py  general.py  human_nature.py  kickers.py  knowledge_base.py  psychology.py  quarterbacks.py  runningbacks.py  sleeper.py  terminology.py  widerecievers.py
services/mcp/tools/: multiply.py  reddit.py  resource_explorer.py  sleeper_draft.py  sleeper_league.py  sleeper_team.py  sleeper_user.py
services/redis/: README.md  config.py  main.py
services/redis/core/: config.py
services/redis/crud/: __init__.py  agent_state.py
services/redis/models/: __init__.py  agent_state.py
services/ui/public/: index.html  manifest.json
shared/: __init__.py
shared/types/: __init__.py
tests/: __init__.py
utilities/: pd_helper.py  refresh_date.py
utils/: system.py
(+84 files in other folders)
