[project]
name = "Lox-Research"
version = "0.1.0"
description = "[Description pending]"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.1",
    "bs4>=0.0.2",
    "cfbd>=4.5.2",
    "datetime>=5.5",
    "fastapi>=0.116.1",
    "google-auth>=2.40.3",
    "google-cloud-storage>=3.2.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "joblib>=1.5.1",
    "nfl-data-py>=0.3.2",
    "numpy>=2.2.6",
    "oauth2client>=4.1.3",
    "pandas>=2.3.1",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "pybaseball>=2.2.7",
    "pybettor>=1.1.3",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "selenium==4.15.2",
    "utils>=1.0.2",
    "uvicorn>=0.35.0",
    "webdriver-manager==4.0.1",
]
