[project]
name = "lox-api"
version = "0.1.0"
description = "[Description pending]"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.1",
    "bs4>=0.0.2",
    "datetime>=5.5",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "google>=3.0.0",
    "google-genai>=1.32.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "nfl-data-py>=0.3.2",
    "numpy>=2.2.6",
    "oauth2client>=4.1.3",
    "pandas>=2.3.1",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium==4.15.2",
    "starlette",
    "utils>=1.0.2",
    "uvicorn>=0.35.0",
    "webdriver-manager==4.0.1",
]
